--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <a href="#inicio"><img src="/img/Logo_principal.png" alt="Logo Eidos"></a>
+        <a href="#inicio"><img src="img/Logo_principal.png" alt="Logo Eidos"></a>
         <nav>
             <ul id="Menu"> 
                 <li class="menu_item"><a href="#Inicio">Inicio</a></li>
@@ -22,7 +22,7 @@
     <main>
         <section id="Inicio">
             <figure class="contenedor">
-                <img src="/img/IMG-20230302-WA0007.jpg" alt="Foto Luis" 
+                <img src="img/IMG-20230302-WA0007.jpg" alt="Foto Luis" 
                     class="mi_foto">
             </figure>
             <article>
@@ -52,9 +52,9 @@
             </article>
             <article>
                 <ul class="botones_link_IMG">
-                    <li><a href="malito:luis.gallardo.tortolero@gmail.com" target="_blank"><img src="/img/mail.png" alt="Imagen Mail"></a></li>
-                    <li><a href="https://github.com/LuisGallardoTortolero/" target="_blank"><img src="/img/github.png" alt="Imagen Github"></a></li>
-                    <li><a href="https://www.linkedin.com/in/luis-a-gallardo/" target="_blank"><img src="/img/linkedin.png" alt="Imagen fa-linkedin"></a></li>
+                    <li><a href="malito:luis.gallardo.tortolero@gmail.com" target="_blank"><img src="img/mail.png" alt="Imagen Mail"></a></li>
+                    <li><a href="https://github.com/LuisGallardoTortolero/" target="_blank"><img src="img/github.png" alt="Imagen Github"></a></li>
+                    <li><a href="https://www.linkedin.com/in/luis-a-gallardo/" target="_blank"><img src="img/linkedin.png" alt="Imagen fa-linkedin"></a></li>
                 </ul>
             </article>
         </section>
